--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <div class="visual-box">
                 <h3>City Breathing Rhythm</h3>
                 
-               <img src="urban_trends_jan_jun_2024.png" class="chart-img">
+               <img src="urban_trends_jan_jun_2024.png">
                 <p style="margin-top: 15px; color: rgba(255,255,255,0.85); line-height: 1.6; font-size: 15px; text-align: justify;">We normalized Citibike rides, traffic volume, and electricity consumption to a 0 to 1 scale to compare how New York's pulse changes from winter to summer. Citibike acts as a perfect thermometer rising linearly with temperature. Traffic, however, spiked erratically in March before crashing in April, revealing chaos rather than seasonal patterns. Electricity remained our stable baseline, jumping in February for heating and plateauing until June's air conditioning demand. New York operates on three disconnected rhythms: predictable bike commuting, volatile traffic, and steady energy consumption.</p>
                 
-                <img src="daily_mobility_pulse_jan_jun_2024.png" class="chart-img">
+                <img src="daily_mobility_pulse_jan_jun_2024.png">
                 <p style="margin-top: 15px; color: rgba(255,255,255,0.85); line-height: 1.6; font-size: 15px; text-align: justify;">Zooming into daily patterns, a critical question emerged: does this seasonal pulse hold at the day to day level?
 The daily view shows Citibike data as a literal heartbeat spiking and dropping with weekends and weather, growing stronger from January to June. Traffic, in contrast, shows massive irregular spikes like late March, proving it's driven by unpredictable events rather than daily patterns. Takeaway: micromobility is stable and plannable; traffic is fundamentally chaotic.</p>
             </div>
